# python-clustering

./: .gitignore  LICENSE  README.rst  pyproject.toml  read_write.py  requirements.txt  setup.cfg  setup.py
all_datasets/: README.md  catalogue_info.json  dataset_info.json
datasets/: README.md  catalogue_info.json  dataset_info.json
datasets/anomalies/: annthyroid.arff  arrhythmia.arff  breastw.arff  cardio.arff  ecoli.arff  glass.arff  ionosphere.arff  letter.arff  mammography.arff  musk.arff  optdigits.arff  pendigits.arff  pima.arff  satimage-2.arff  shuttle.arff  thyroid.arff  vertebral.arff  vowels.arff  wbc.arff  wine.arff
datasets_all/: README.md  catalogue_info.json  dataset_info.json  info.json  map.json
examples/: Outlier detection for a single cluster.ipynb  Outlier detection for multiple clusters treated as multiple cluster.ipynb  Outlier detection for multiple clusters treated as single cluster.ipynb
python_clustering/: __init__.py  aiff_reader.py  dataset_utilities.py  load_dataset.py  python_clustering.py  setup.cfg  setup.py
python_clustering/datasets/: dataset_source_information.json  dataset_utilities.py
python_clustering/jsons/: dataset_info.json
python_clustering/src/: python_clustering.py
python_clustering/src/python_clustering/: python_clustering.py
python_clustering/src/python_clustering/utilities/: dataset_utilities.py
python_clustering/src/utilities/: catalogue_utilities.py  read_utilities.py
python_clustering/utilities/: anomaly_detection.py  catalogue_utilities.py  dataset_utilities.py  preprocessing_utilities.py  read_utilities.py
src/: setup.cfg
src/python_clustering/jsons/: catalogue_info.json
tests/: main.py  test.py  test_load_data.py  test_tasks.py
