[metadata]
name=python-clustering
version=1.1.0
license=MIT
description=Intuitive access to clustering datasets, methods and tasks
long_description = file:README.md
author=ce1ebi
author_email=ivanreznikov@gmail.com
url=https://github.com/IvanReznikov/python-clustering
download_url=https://pypi.org/project/python-clustering/
keywords= clustering, datasets
description_file = README.md
packages= python_clustering

[options]
python_requires = >=3.6
install_requires = 
        scipy>=1.7.3
        pandas>=1.3.4
        scikit-learn>=0.24.2
        numpy>=1.19.5
        arff==0.9
        pytablewriter==0.64.2
        requests>=2.28.1

packages = find_namespace:
zip_safe = False

[options.packages.find]
include =
    python_clustering*
exclude =
    all_datasets
    all_datasets.*
    all_datasets*
    tests
    dist
    docs
    examples

[options.package_data]
python_clustering.jsons =
    *.json
python_clustering.datasets =
    *.arff

