[metadata]
name=python-clustering
version=1.0.1
license=MIT
description=Intuitive access to clustering datasets, methods and tasks
author=ce1ebi
author_email=ivanreznikov@gmail.com
url=
download_url=
keywords= clustering, datasets
description_file = README.md
packages= python_clustering

[options]
python_requires = >=3.6
install_requires = 
        scipy>=1.7.3
        pandas>=1.3.4
        scikit-learn>=0.24.2
        numpy>=1.19.5
include_package_data = True
package_dir =
    = src
packages = find_namespace:

[options.packages.find]
where=src

[options.package_data]
* = *.json, *.arff

